charts/kafka-rest/cp-kafka-rest/templates/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: "kafka-strip"
  namespace: hanwha
spec:
  stripPrefixRegex:
    regex:
      - "/kafka"
