charts/kafka-rest/cp-kafka-rest/templates/Ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cp-kafka-rest
  namespace: hanwha
spec:
  entryPoints:
    - web
  routes:
    - match: (PathPrefix(`/kafka`))
      kind: Rule
      services:
        - name: kafka-rest-cp-kafka-rest
          kind: Service
          port: 8082
      middlewares:
      - name: "kafka-strip"
